<resources>
    <string name="app_name" translatable="false">TrafikApp</string>
    <string name="activity_login_textView_titulo">Inicio de sesión</string>
    <string name="activity_login_input_email">Email</string>
    <string name="activity_login_input_password">Contraseña</string>
    <string name="activity_login_button_login">Iniciar Sesion</string>
    <string name="activity_login_toast_errorCredenciales">Credenciales no validas</string>
    <string name="activity_login_checkBox_verPass">Ver contraseña</string>
    <string name="google_maps_key" translatable="false">AIzaSyDlGI_JifsSwqvvGfVNdiaqQNAS2Q9dcX8</string>
    <string name="activity_main_filtroInfo_camaras">Cámaras</string>
    <string name="activity_main_filtroInfo_incidencias">Incidencias</string>
    <string name="activity_main_filtroInfo_favoritos">Favoritos</string>
    <string name="activity_main_toast_logout">Sesion cerrada</string>
    <string name="activity_main_toast_error_incidencias">Error al obtener las incidencias</string>
    <string name="activity_main_toast_error_camaras">Error al obtener las camaras</string>
    <string name="activity_main_toast_actualizandoMapa">Actualizando mapa...</string>
    <string name="activity_main_alert_dialog_errorTitulo">¡Error al cargar los datos!</string>
    <string name="activity_main_alert_dialog_errorCarga">¡Comprueba tu conexion y reinicia la aplicacion!</string>
    <string name="camara_actions_bottom_sheet_titulo">Información de la cámara</string>
    <string name="camara_actions_bottom_sheet_añadirFavorito">Añadir a favoritos</string>
    <string name="camara_actions_bottom_sheet_eliminarFavorito">Eliminar de favoritos</string>
    <string name="camara_actions_bottom_sheet_masInfo">Más información</string>
    <string name="activity_adaptador_marcador_masInfo">Pulsa para ver más información</string>
    <string name="activity_camara_noDisponible">No disponible</string>
    <string name="activity_camara_textView_nombreCamara">Nombre:</string>
    <string name="activity_camara_textView_nombreCarretera">Carretera:</string>
    <string name="activity_camara_textView_ubicacion">Ubicación:</string>
    <string name="popup_filtro_camaras">Cámaras</string>
    <string name="popup_filtro_incidencias">Incidencias</string>
    <string name="popup_filtro_favoritos">Favoritos</string>
    <string name="activity_configuracion_textView_titulo">Configuración</string>
    <string name="activity_configuracion_textView_tituloNotificaciones">Notificaciones</string>
    <string name="activity_configuracion_checkBox_IncidenciasFavoritas">Incidencias Favoritas</string>
    <string name="activity_configuracion_checkBox_IncidenciasNuevas">Nuevas Incidencias</string>
    <string name="activity_configuracion_textView_tituloIdioma">Idioma de la aplicación</string>
    <string name="activity_configuracion_textView_Idioma">Idioma:</string>
    <string name="activity_configuracion_toast_actualizado">¡Configuracion actualizada correctamente!</string>
    <string name="activity_configuracion_button_aplicarConfig">Aplicar Configuracion</string>
    <string name="activity_configuracion_toast_sinPermisoNotificaciones">¡No se han dado permisos para recibir notificaciones!</string>
    <string name="activity_configuracion_toast_permisoNotificaciones">Se han dado permisos para recibir notificaciones</string>

    <string name="notificaciones_nuevasIncidencias">¡Nuevas incidencias encontradas!</string>
    <string name="notificaciones_pulsaMasInfo">Pulsa para ver mas detalles</string>
    <string name="notificaciones_canal_descripcion">Canal para notificaciones de incidencias nuevas o resueltas</string>
    <string name="incidencia_resuelta">Incidencia resuelta</string>

    <plurals name="incidencia_resuelta">
        <item quantity="one">%d incidencia favorita ha sido resuelta</item>
        <item quantity="other">%d incidencias favoritas han sido resueltas</item>
    </plurals>

    <string-array name="idiomas_array">
        <item>Español</item>
        <item>Inglés</item>
        <item>Euskera</item>
    </string-array>

</resources>